Walls' gaps fixes

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-	font-family:LoR_font;
+	font-family:lor_font,Constantia,Arial;
 	text-align:center;
 	margin:0px;
 	padding:0px;
